deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omcgo
  labels:
    app.kubernetes.io/part-of: omcgo
